tests/algorithms/x/Java/data_structures/linked_list/swap_nodes.error
compile: exit status 1
/tmp/TestJavaTranspiler_Algorithms_Golden238_swap_nodes689117866/001/Main.java:20: error: method concat in class Main cannot be applied to given types;
        res = ((int[])(concat(res, list.data)));
                       ^
  required: T[],T[]
  found:    int[],int[]
  reason: inference variable T has incompatible bounds
    equality constraints: int
    upper bounds: Object
  where T is a type-variable:
    T extends Object declared in method <T>concat(T[],T[])
1 error
